# offline-robotic-manipulation-curriculum

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
outputs/: training_results.json
results/: results.json
scripts/: evaluate.py  train.py
src/offline_robotic_manipulation_curriculum/: __init__.py
src/offline_robotic_manipulation_curriculum/data/: __init__.py  loader.py  preprocessing.py
src/offline_robotic_manipulation_curriculum/evaluation/: __init__.py  metrics.py
src/offline_robotic_manipulation_curriculum/models/: __init__.py  model.py
src/offline_robotic_manipulation_curriculum/scripts/: __init__.py  evaluate.py  train.py
src/offline_robotic_manipulation_curriculum/training/: __init__.py  trainer.py
src/offline_robotic_manipulation_curriculum/utils/: __init__.py  config.py  logger.py  nn_utils.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
